# semantic-cache-py

./: .gitignore  LICENSE  README.md  example_.env  pyproject.toml
.github/workflows/: ci.yml
examples/: llm.py
semantic_cache/: __init__.py  semantic_caching.py
tests/: test_semantic_caching.py
upstash_semantic_cache/: __init__.py  semantic_cache.py  semantic_caching.py
